--- a/print.html
+++ b/print.html
@@ -12,6 +12,8 @@ permalink: /print
 
 {% include experiences.html %}
 
+{% include certifications.html %}
+
 {% include projects.html %}
 
 {% include publications.html %}
